<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/topbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/filterstuff"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:layout_marginStart="20dp">

            <LinearLayout
                android:id="@+id/textViewandButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Filter:"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/filter_type"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/applyFilterButton"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="Apply"
                    android:textAllCaps="false"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation" />

    <Button
        android:id="@+id/add_quirk_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/bottom_navigation"
        android:text="New Quirk" />

    <ListView
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:id="@+id/quirk_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/add_quirk_button"
        android:layout_below="@id/topbuttons"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="8dp" />

</RelativeLayout>

