...
        android:id="@+id/action_newevent"
        android:enabled="true"
        android:icon="@drawable/ic_add_box"
        android:title="@string/event_image_desc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_quirklist"
        android:enabled="true"
        android:icon="@drawable/ic_viewlist"
        android:title="@string/quirklist_image_desc"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_home"
...
