<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/top_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        app:itemBackground="@color/backgroundaccent"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/socialtab" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation" >
    </android.support.design.widget.BottomNavigationView>

    <EditText
        android:id="@+id/editTextFindFriend"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top_navigation"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="Search for Friend"
        android:inputType="textPersonName" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editTextFindFriend"
        android:layout_alignParentStart="true"
        android:layout_marginStart="315dp"
        android:onClick="findFriendSearchBut"
        app:srcCompat="@drawable/ic_search_black_24dp" />

    <ListView
        android:id="@+id/findfriend_listview"
        android:layout_width="match_parent"
        android:layout_marginTop="120dp"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom_navigation"
        android:layout_alignParentStart="true" />


</RelativeLayout>