<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_gravity="center"
    android:background="@color/backgroundlight"
    android:descendantFocusability="blocksDescendants">

    <LinearLayout
        android:id="@+id/headerbar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/FindFriendtext"
            android:layout_width="286dp"
            android:layout_height="20dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:focusable="false"
            android:text="This is a test"
            android:textSize="16sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewaddFriend"
        android:layout_width="34dp"
        android:layout_height="41dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_person_add_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonAddFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</RelativeLayout>