...
            android:text="TextView"
            android:textSize="14sp"
            android:layout_below="@id/el_eventcomment" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/el_eventview"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="42dp"
        app:srcCompat="@android:drawable/ic_media_play" />
...
