<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cmput301f17t12.quirks.Activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/el_toplabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/el_topborder"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:background="@color/background" />

        <TextView
            android:id="@+id/el_quirkname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:layout_centerInParent="true"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>
    </RelativeLayout>

    <ListView
        android:id="@+id/el_eventslistview"
        android:layout_below="@id/el_toplabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

</RelativeLayout>
